--- a/home-page.html
+++ b/home-page.html
@@ -19,7 +19,7 @@
             </a>
             <a class="item_menu" href="">Home</a>
             <a class="item_menu" href="./blog-listing.html">Blog</a>
-            <a class="item_menu" href="">Single Post</a>
+            <a class="item_menu" href="./single-post.html">Single Post</a>
             <a class="item_menu" href="./author-page.html">Pages</a>
             <a class="item_menu" href="">Contact</a>
         </nav>
@@ -36,17 +36,17 @@
     <main class = "width-1200">
         <section>
             <div class = "logo_header">
-                <img class = "logo_main" src="./asset/img/Image.svg" alt="">
+                <img class = "logo_main width-1200" src="./asset/img/Image.svg" alt="">
             </div>
-                <div class="form_introduce">
-                    <span>Technology</span>
-                    <h2>The Impact of Technology on the Workplace: How Technology is Changing</h2>
-                    <div class="infor">
-                        <img src="./asset/img/Image (1).svg" alt="">
-                        <span>Jason Francisco</span>
-                        <span>August 20, 2022</span>
-                    </div>
+            <div class="form_introduce width-1130">
+                <span>Technology</span>
+                <h2>The Impact of Technology on the Workplace: How Technology is Changing</h2>
+                <div class="infor">
+                    <img src="./asset/img/Image (1).svg" alt="">
+                    <span>Jason Francisco</span>
+                    <span>August 20, 2022</span>
                 </div>
+            </div>
         </section>
         
        <section class="adver">
@@ -157,7 +157,7 @@
             <span>750X100</span>
        </section>   
     </main>
-    <footer >
+    <footer>
         <div class = "width-1200">
             <article class = "about">
                 <strong>About</strong>
@@ -216,7 +216,7 @@
                 <img src="./asset/img/logofooter.svg" alt="">
                 <span>
                     <p>Meta<strong>Blog</strong></p>
-                    <p></p>
+                    <p>© JS Template 2023. All Rights Reserved.</p>
                 </span>
             </div>
             <ul>
@@ -234,5 +234,6 @@
             </ul>
         </div>
     </footer>
+    <script src = "./asset/js/index.js"></script>
 </body>
 </html>
