--- a/home-page.html
+++ b/home-page.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="stylesheet" href="./asset/css/reset.css">
+    <link rel="stylesheet" href="./asset/style/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./asset/css/home-page.css">
+    <link rel="stylesheet" href="./asset/style/home-page.css">
 </head>
 
 <body>
@@ -54,9 +54,9 @@
         </section>
 
         <section class="advertisement">
-            <span>Advertisement</span>
+            <p>Advertisement</p>
             <h4>You can place ads</h4>
-            <span>750X100</span>
+            <p>750X100</p>
         </section>
 
         <section class="list-post">
@@ -175,13 +175,13 @@
             <button class="view">View All Post</button>
         </section>
         <section class="advertisement">
-            <span>Advertisement</span>
+            <p>Advertisement</p>
             <h4>You can place ads</h4>
-            <span>750X100</span>
+            <p>750X100</p>
         </section>
     </main>
     <footer>
-        <div class="width-1200 firt">
+        <div class="width-1200 first">
             <div class="about">
                 <h5>About</h5>
                 <p>
@@ -227,9 +227,9 @@
                     <p>Get blog articles and offers via email</p>
                     <label for="">
                         <input type="email" placeholder="Your Email">
-                        <i class="fa-light fa-envelope"></i>
+                        <i class="fa-regular fa-envelope"></i>
                     </label>
-                    <button class="btn">Subscribe</button>
+                    <button>Subscribe</button>
                 </form>
             </div>
         </div>
@@ -256,7 +256,7 @@
             </ul>
         </div>
     </footer>
-    <script src="./asset/js/index.js"></script>
+    <script src="./asset/script/index.js"></script>
 </body>
 
 </html>
