--- a/single-post.html
+++ b/single-post.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Single Post</title>
-    <link rel="stylesheet" href="./asset/css/reset.css">
+    <link rel="stylesheet" href="./asset/style/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./asset/css/single-post.css">
+    <link rel="stylesheet" href="./asset/style/single-post.css">
 </head>
 
 <body>
@@ -39,9 +39,9 @@
     </header>
     <main class="width-800">
         <section>
-            <div class="form_introduce">
+            <div class="form-introduce">
                 <span class="tag">Technology</span>
-                <h2>The Impact of Technology on the Workplace: How Technology is Changing</h2>
+                <h2>The Impact of Technology on the Workplace: <br> How Technology is Changing</h2>
                 <div class="infor-user">
                     <div class="user">
                         <img src="./asset/img/img-person.svg" alt="">
@@ -62,6 +62,8 @@
                     tricks
                     for a memorable journey and how to make the most of your travels.
                 </p>
+                <br>
+                <br>
                 <p>
                     One of the most rewarding aspects of traveling is immersing yourself in the local culture and
                     customs.
@@ -79,6 +81,8 @@
                     accommodations.
                     Doing so will help you navigate your destination with confidence and avoid any cultural faux pas.
                 </p>
+                <br>
+                <br>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et
@@ -99,6 +103,8 @@
                     that
                     you have time to relax and enjoy your journey.
                 </p>
+                <br>
+                <br>
                 <p>
                     Vitae sapien pellentesque habitant morbi tristique. Luctus venenatis lectus magna fringilla. Nec
                     ullamcorper
@@ -108,17 +114,15 @@
         </section>
         <section>
             <article class="italics">
-                <i>
-                    “ Traveling can expose you to new environments and potential health
-                    risks, so it's crucial to take precautions to stay safe and healthy. ”
-                </i>
+                “Traveling can expose you to new environments and potential health
+                risks, so it's crucial to take precautions to stay safe and healthy.”
             </article>
         </section>
         <img src="./asset/img/imgsingle2.svg" alt="">
-        <section class="adver">
-            <span>Advertisement</span>
+        <section class="advertisement">
+            <p>Advertisement</p>
             <h4>You can place ads</h4>
-            <span>750X100</span>
+            <p>750X100</p>
         </section>
         <section>
             <article>
@@ -169,25 +173,25 @@
         </section>
     </main>
     <footer>
-        <div class="width-1200">
-            <article class="about">
-                <strong>About</strong>
+        <div class="width-1200 first">
+            <div class="about">
+                <h5>About</h5>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit,
                     sed do eiumod tempor incididunt ut labore et dolore
                     magna aliqua. ut enim ad minim veniam
                 </p>
                 <ul>
-                    <li>
-                        <strong>Email: </strong> infor@jstemplate.net
+                    <li class="list-footer">
+                        <h5>Email: </h5> infor@jstemplate.net
                     </li>
-                    <li>
-                        <strong>Phone: </strong> 880 123 456 789
+                    <li class="list-footer">
+                        <h5>Phone: </h5> 880 123 456 789
                     </li>
                 </ul>
-            </article>
-            <article class="quick-link">
-                <strong>Quick Link</strong>
+            </div>
+            <div class="quick-link">
+                <h5>Quick Link</h5>
                 <ul>
                     <li><a href="">Home</a></li>
                     <li><a href="">About</a></li>
@@ -196,9 +200,9 @@
                     <li><a href="">Author</a></li>
                     <li><a href="">Contact</a></li>
                 </ul>
-            </article>
-            <article class="category">
-                <strong>Category</strong>
+            </div>
+            <div class="category">
+                <h5>Category</h5>
                 <ul>
                     <li><a href="">Lifestyle</a></li>
                     <li><a href="">Technology</a></li>
@@ -208,36 +212,35 @@
                     <li><a href="">Sports</a></li>
                 </ul>
 
-            </article>
-            <article class="form-footer">
-                <h4>Weekly NewSletter</h4>
-                <p>Get blog articles and offers via email</p>
-                <label for="" class="form_ipt">
+            </div>
+            <div class="form-footer">
+                <form action="">
+                    <h4>Weekly NewSletter</h4>
+                    <p>Get blog articles and offers via email</p>
                     <label for="">
                         <input type="email" placeholder="Your Email">
-                        <i class="fa fa-envelope"></i>
+                        <i class="fa-regular fa-envelope"></i>
                     </label>
-
-                    <button class="btn">Subscribe</button>
-                </label>
-            </article>
+                    <button>Subscribe</button>
+                </form>
+            </div>
         </div>
         <div class="last width-1200">
             <div class="logo-footer">
                 <img src="./asset/img/logofooter.svg" alt="">
                 <span>
-                    <p>Meta<strong>Blog</strong></p>
-                    <p>© JS Template 2023. All Rights Reserved.</p>
+                    <a href="">
+                        <p>Meta<strong>Blog</strong></p>
+                        <p>© JS Template 2023. All Rights Reserved.</p>
+                    </a>
                 </span>
             </div>
             <ul>
                 <li>
                     <a href="">Terms of Use</a>
-                    <span class="scorball"></span>
                 </li>
                 <li>
                     <a href="">Privacy Policy</a>
-                    <span class="scorball"></span>
                 </li>
                 <li>
                     <a href="">Cookie Policy</a>
@@ -245,7 +248,7 @@
             </ul>
         </div>
     </footer>
-    <script src="./asset/js/index.js"></script>
+    <script src="./asset/script/index.js"></script>
 </body>
 
 </html>
