--- a/blog-listing.html
+++ b/blog-listing.html
@@ -237,7 +237,10 @@
                 <img src="./asset/img/logofooter.svg" alt="">
                 <span>
                     <p>Meta<strong>Blog</strong></p>
-                    <p>© JS Template 2023. All Rights Reserved.</p>
+                    <p>
+                        <span>©</span>
+                        JS Template 2023. All Rights Reserved.
+                    </p>
                 </span>
             </div>
             <ul>
