--- a/home-page.html
+++ b/home-page.html
@@ -34,6 +34,7 @@
             </label>
             <label class="item-ipt">
                 <input type="checkbox" name="" class="switch-toggle" id="light-dark">
+                <img src="./asset/img/Vector.svg" alt="">
             </label>
         </form>
     </header>
@@ -239,7 +240,10 @@
                 <span>
                     <a href="">
                         <p>Meta<strong>Blog</strong></p>
-                        <p>© JS Template 2023. All Rights Reserved.</p>
+                        <p>
+                            <span>©</span>
+                            JS Template 2023. All Rights Reserved.
+                        </p>
                     </a>
                 </span>
             </div>
