--- a/single-post.html
+++ b/single-post.html
@@ -231,7 +231,10 @@
                 <span>
                     <a href="">
                         <p>Meta<strong>Blog</strong></p>
-                        <p>© JS Template 2023. All Rights Reserved.</p>
+                        <p>
+                            <span>©</span>
+                            JS Template 2023. All Rights Reserved.
+                        </p>
                     </a>
                 </span>
             </div>
