--- a/home-page.html
+++ b/home-page.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link rel="stylesheet" href="./asset/style/reset.css">
+    <!-- <link rel="stylesheet" href="./asset/bootstrap-5.3.0-dist/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -280,6 +281,7 @@
             </ul>
         </div>
     </footer>
+    <script src="./asset/bootstrap-5.3.0-dist/js/bootstrap.bundle.min.js"></script>
     <script src="./asset/script/index.js"></script>
 </body>
 
