--- a/home-page.html
+++ b/home-page.html
@@ -37,15 +37,14 @@
                         <path d="M10.5715 10.5716L14 14" stroke="#52525B" stroke-width="1.5" stroke-miterlimit="10"
                             stroke-linecap="round" />
                     </svg>
-
                 </button>
-
             </label>
             <label class="item-ipt">
                 <input type="checkbox" name="" class="switch-toggle" id="light-dark">
                 <img src="./asset/img/Vector.svg" alt="">
             </label>
         </form>
+        <button class="icon fa-solid fa-bars"></button>
     </header>
     <main class="width-1200">
         <section>
