--- a/home-page.html
+++ b/home-page.html
@@ -10,6 +10,8 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./asset/style/home-page.css">
+    <link rel="stylesheet" href="./asset/style/responsive.css">
+
 </head>
 
 <body>
@@ -45,7 +47,7 @@
             </label>
         </form>
         <nav class="nav">
-            <button class="icon fa-solid fa-bars"></button>
+            <button id="click" class="icon fa-solid fa-bars"></button>
             <ul class="item-menu">
                 <li><a href="">Home</a></li>
                 <li><a href="./blog-listing.html">Blog</a></li>
@@ -69,7 +71,6 @@
             </form>
 
         </nav>
-        <!-- <button class="icon fa-solid fa-bars"></button> -->
     </header>
     <main class="width-1200">
         <section>
@@ -87,10 +88,10 @@
             </div>
         </section>
 
-        <section class="advertisement">
+        <section class="advertisement width-750">
             <p>Advertisement</p>
             <h4>You can place ads</h4>
-            <p>750X100</p>
+            <p>750x100</p>
         </section>
 
         <section class="list-post">
@@ -208,10 +209,10 @@
             </div>
             <button class="view">View All Post</button>
         </section>
-        <section class="advertisement">
+        <section class="advertisement width-750">
             <p>Advertisement</p>
             <h4>You can place ads</h4>
-            <p>750X100</p>
+            <p>750x100</p>
         </section>
     </main>
     <footer>
@@ -305,6 +306,7 @@
         </div>
     </footer>
     <script src="./asset/script/index.js"></script>
+    <script src="./asset/script/click.js"></script>
 </body>
 
 </html>
