--- a/home-page.html
+++ b/home-page.html
@@ -10,7 +10,8 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./asset/style/home-page.css">
-    <link rel="stylesheet" href="./asset/style/responsive.css">
+    <link rel="stylesheet" href="./asset/style/media-screen.css">
+    <!-- <link rel="stylesheet" href="./asset/style/responsive.css"> -->
 
 </head>
 
