--- a/home-page.html
+++ b/home-page.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <header class="width-1200">
+    <header class="width-1216">
         <nav>
             <a class="logo" href="">
                 <img src="./asset/img/Logo.svg" alt="">
@@ -73,9 +73,9 @@
 
         </nav>
     </header>
-    <main class="width-1200">
+    <main class="width-1216">
         <section>
-            <img class="width-1200" src="./asset/img/Image.svg" alt="">
+            <img class="width-img" src="./asset/img/Image.svg" alt="">
             <div class="form-introduce width-1130">
                 <span class="tag">Technology</span>
                 <h2>The Impact of Technology on <br> the Workplace: How <br> Technology is Changing</h2>
@@ -217,7 +217,7 @@
         </section>
     </main>
     <footer>
-        <div class="width-1200 first">
+        <div class="width-1216 first">
             <div class="about">
                 <h5>About</h5>
                 <p>
@@ -230,7 +230,7 @@
                         <h5>Email: </h5> infor@jstemplate.net
                     </li>
                     <li class="list-footer">
-                        <h5>Phone: </h5> 880 123 456 789
+                        <h5>Phone: </h5> 880&nbsp;123&nbsp;456&nbsp;789
                     </li>
                 </ul>
             </div>
@@ -280,7 +280,7 @@
                 </form>
             </div>
         </div>
-        <div class="last width-1200">
+        <div class="last width-1216">
             <div class="logo-footer">
                 <img src="./asset/img/logofooter.svg" alt="">
                 <span>
