--- a/home-page.html
+++ b/home-page.html
@@ -30,7 +30,7 @@
             </ul>
         </nav>
         <form>
-            <label class="item-ipt">
+            <div class="item-ipt">
                 <input type="text" placeholder="Search">
                 <button>
                     <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -41,7 +41,7 @@
                             stroke-linecap="round" />
                     </svg>
                 </button>
-            </label>
+            </div>
             <label class="item-ipt">
                 <input type="checkbox" name="" class="switch-toggle" id="light-dark">
                 <i><svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
