--- a/home-page.html
+++ b/home-page.html
@@ -16,8 +16,8 @@
 </head>
 
 <body>
-    <header class="width-1216">
-        <nav>
+    <header>
+        <nav class="container">
             <a class="logo" href="">
                 <img src="./asset/img/logo-header.png" alt="">
             </a>
@@ -85,7 +85,7 @@
         <button id="click" class="icon fa-solid fa-bars"></button>
         </nav>
     </header>
-    <main class="width-1216">
+    <main>
         <section>
             <img class="width-img" src="./asset/img/img.png" alt="">
             <div class="form-introduce width-1130">
