--- a/blog-listing.html
+++ b/blog-listing.html
@@ -25,17 +25,18 @@
                 <li><a href="./author-page.html">Pages</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
-        </nav>
-        <form>
-            <label class="item-ipt">
-                <input type="text" placeholder="Search">
-                <button><i class="fa-solid fa-magnifying-glass"></i></button>
+            <form>
+                <div class="item-ipt">
+                    <input type="text" placeholder="Search">
+                    <button><i class="fa-solid fa-magnifying-glass"></i></button>
 
-            </label>
-            <label class="item-ipt">
-                <input type="checkbox" name="" class="switch-toggle" id="light-dark">
-            </label>
-        </form>
+                </div>
+                <label class="item-ipt">
+                    <input type="checkbox" name="checkbox" class="switch-toggle" id="light-dark">
+                </label>
+            </form>
+        </nav>
+
     </header>
     <main class="width-1200">
         <section class="pagetitle">
