--- a/home-page.html
+++ b/home-page.html
@@ -29,7 +29,7 @@
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <ul class="navbar-nav mb-2 mb-lg-0 justify-content-end d-lg-flex d-none">
+                <ul class="navbar-nav mb-lg-0 justify-content-end d-md-flex flex-md-row d-none">
                     <li class="nav-item">
                         <a class="nav-link me-4" href="">Home</a>
                     </li>
@@ -47,7 +47,7 @@
                     </li>
                 </ul>
                 <form class="d-flex order-2 me-3 align-items-center" action="#">
-                    <div class="item-ipt d-md-flex d-none">
+                    <div class="item-ipt d-lg-flex d-none">
                         <input type="text" name="search" class="form-control me-2 playNone" placeholder="Search">
                         <button onclick="showSearch()">
                             <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
