--- a/home-page.html
+++ b/home-page.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./asset/style/reset.css">
     <link rel="stylesheet" href="./asset/style/vendor.min.css">
     <link rel="stylesheet" href="./asset/style/home-page.css">
     <link rel="stylesheet" href="./asset/style/media-screen.css">
@@ -17,18 +16,19 @@
 </head>
 
 <body>
-    <!-- <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary container mt-md-4 mb-md-5">
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary  container mt-md-4 mb-md-5">
             <div class="container-fluid">
                 <a class="navbar-brand me-auto order-0" href="">
                     <img src="./asset/img/logo-header.png" alt="Logo" class="d-inline-block align-text-top">
                 </a>
-                <button class="navbar-toggler order-3 bg-light p-2 d-md-none" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler bg-light order-3 p-2 d-md-none" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <ul class="navbar-nav mb-lg-0 justify-content-end d-md-flex flex-md-row d-none">
+                <ul id="navbarSupportedContent"
+                    class="navbar-nav mb-lg-0 justify-content-md-end justify-content-between order-md-1 order-3 d-md-flex flex-sm-row flex-column text-center">
                     <li class="nav-item">
                         <a class="nav-link me-4" href="">Home</a>
                     </li>
@@ -45,7 +45,7 @@
                         <a class="nav-link me-4" href="">Contact</a>
                     </li>
                 </ul>
-                <form class="d-flex order-2 me-3 align-items-center" action="#">
+                <form class="d-flex me-3 align-items-center order-2" action="#">
                     <div class="item-ipt d-md-flex d-none">
                         <input type="text" name="search" class="form-control me-2 d-lg-flex d-none border-0 playNone"
                             placeholder="Search">
@@ -81,10 +81,9 @@
             </div>
 
         </nav>
-
-    </header> -->
-    <main class="container">
-        <!-- <section class="position-relative">
+    </header>
+    <!-- <main class="container">
+        <section class="position-relative">
             <img class="container" src="./asset/img/img.png" alt="">
             <div class="form-introduce position-absolute d-inline-block border-1 bg-light">
                 <span class="tag">Technology</span>
@@ -99,11 +98,11 @@
             </div>
         </section>
 
-        <section class="advertisement width-750">
+        <section class="advertisement text-center width-750">
             <p>Advertisement</p>
             <h4>You can place ads</h4>
             <p>750x100</p>
-        </section> -->
+        </section>
 
         <section class="list-post">
             <h4>Latest Post</h4>
@@ -218,15 +217,16 @@
                     </div>
                 </article>
             </div>
-            <button class="border-1 view rounded d-flex justify-content-center align-items-center">View All
-                Post</button>
+            <button class="border-1 view rounded d-flex justify-content-center align-items-center">
+                View All Post
+            </button>
         </section>
-        <section class="advertisement width-750">
+        <section class="advertisement text-center width-750">
             <p>Advertisement</p>
             <h4>You can place ads</h4>
             <p>750x100</p>
         </section>
-    </main>
+    </main> -->
     <!-- <footer>
         <div class="container first">
             <div class="about">
