--- a/home-page.html
+++ b/home-page.html
@@ -5,9 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./asset/style/vendor.min.css">
     <link rel="stylesheet" href="./asset/style/home-page.css">
     <link rel="stylesheet" href="./asset/style/media-screen.css">
@@ -96,7 +93,7 @@
 
         </nav>
     </header>
-    <!--<main class="container">
+    <main class="container">
         <section class="position-relative">
             <img class="container" src="./asset/img/img.png" alt="">
             <div class="form-introduce position-absolute d-inline-block border-1 bg-light">
