--- a/home-page.html
+++ b/home-page.html
@@ -6,29 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link rel="stylesheet" href="./asset/style/vendor.min.css">
-    <link rel="stylesheet" href="./asset/style/home-page.css">
     <link rel="stylesheet" href="./asset/style/media-screen.css">
+    <link rel="stylesheet" href="./asset/style/home-page.css">
     <!-- <link rel="stylesheet" href="./asset/style/responsive.css"> -->
 
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary  container mt-md-4 mb-md-5">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary container nav-header">
             <div class="container-fluid">
                 <a class="navbar-brand me-auto order-0" href="">
                     <img src="./asset/img/logo-header.png" alt="Logo" class="d-inline-block align-text-top">
                 </a>
-                <button class="navbar-toggler bg-light order-3 p-2 d-md-none" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler d-md-none bg-light btn-show-nav" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <ul id="navbarSupportedContent"
-                    class="navbar-nav mb-lg-0 justify-content-md-end justify-content-between order-md-1 order-3 d-md-flex flex-sm-row flex-column text-center">
-                    <li class="nav-item d-sm-none bg-light d-flex">
-                        <input type="text" name="search" placeholder="Search" class="w-75 px-4 border-0">
-                        <button class="border-0 p-1 w-25">
+                <ul id="navbarSupportedContent" class="navbar-nav mb-lg-0 text-center">
+                    <li class="nav-item d-sm-none d-flex">
+                        <input type="text" name="search" placeholder="Search" class="border-0">
+                        <button class="border-0">
                             <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -40,27 +39,27 @@
                         </button>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-4" href="">Home</a>
+                        <a class="nav-link" href="">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-4" href="./blog-listing.html">Blog</a>
+                        <a class="nav-link" href="./blog-listing.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-4" href="./single-post.html">Single Post</a>
+                        <a class="nav-link" href="./single-post.html">Single Post</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-4" href="./author-page.html">Pages</a>
+                        <a class="nav-link" href="./author-page.html">Pages</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-4" href="">Contact</a>
+                        <a class="nav-link" href="">Contact</a>
                     </li>
 
                 </ul>
-                <form class="d-flex me-3 align-items-center order-2" action="#">
+                <form class="d-flex align-items-center" action="#">
                     <div class="item-ipt d-sm-flex d-none">
-                        <input type="text" name="search" class="form-control me-2 d-lg-flex d-none border-0"
+                        <input type="text" name="search" class="form-control border-0 d-lg-flex d-none"
                             placeholder="Search">
-                        <button class="border-0 p-2">
+                        <button class="border-0">
                             <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -93,7 +92,7 @@
 
         </nav>
     </header>
-    <main class="container">
+    <!-- <main class="container">
         <section class="position-relative">
             <img class="container" src="./asset/img/img.png" alt="">
             <div class="form-introduce position-absolute d-inline-block border-1 bg-light">
@@ -237,7 +236,7 @@
             <h4>You can place ads</h4>
             <p>750x100</p>
         </section>
-    </main> -->
+    </main>  -->
     <!-- <footer>
         <div class="container first">
             <div class="about">
