--- a/home-page.html
+++ b/home-page.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary container nav-header">
+    <!-- <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary container custorm-container nav-header">
             <div class="container-fluid">
                 <a class="navbar-brand me-auto order-0" href="">
                     <img src="./asset/img/logo-header.png" alt="Logo" class="d-inline-block align-text-top">
@@ -91,8 +91,8 @@
             </div>
 
         </nav>
-    </header>
-    <!-- <main class="container">
+    </header>  -->
+    <main class="container custorm-container">
         <section class="position-relative">
             <img class="container" src="./asset/img/img.png" alt="">
             <div class="form-introduce position-absolute d-inline-block border-1 bg-light">
@@ -117,115 +117,133 @@
         <section class="list-post">
             <h4>Latest Post</h4>
             <div class="posts row flex-row flex-wrap">
-                <article class="col-4">
-                    <img src="./asset/img/img-post1.png" alt="">
-                    <span class="tag rounded">Technology</span>
-                    <h4>The Impact of Technologu on the Workplace: How Teachnology is Changing</h4>
-                    <div class="infor-user">
-                        <div class="user">
-                            <img src="./asset/img/img-user2.png" alt="">
-                            <span>Tracey Wilson</span>
+                <div class="col-4">
+                    <article>
+                        <img src="./asset/img/img-post1.png" alt="">
+                        <span class="tag rounded">Technology</span>
+                        <h4>The Impact of Technologu on the Workplace: How Teachnology is Changing</h4>
+                        <div class="infor-user">
+                            <div class="user">
+                                <img src="./asset/img/img-user2.png" alt="">
+                                <span>Tracey Wilson</span>
+                            </div>
+                            <span class="time">August 20, 2022</span>
                         </div>
-                        <span class="time">August 20, 2022</span>
-                    </div>
-                </article>
-                <article class="col-4">
-                    <img src="./asset/img/img-post2.png" alt="">
-                    <span class="tag rounded">Technology</span>
-                    <h4>The Impact of Technologu on the Workplace: How Teachnology is Changing</h4>
-                    <div class="infor-user">
-                        <div class="user">
-                            <img src="./asset/img/img-user1.png" alt="">
-                            <span>Json Francisco</span>
+                    </article>
+                </div>
+                <div class="col-4">
+                    <article>
+                        <img src="./asset/img/img-post2.png" alt="">
+                        <span class="tag rounded">Technology</span>
+                        <h4>The Impact of Technologu on the Workplace: How Teachnology is Changing</h4>
+                        <div class="infor-user">
+                            <div class="user">
+                                <img src="./asset/img/img-user1.png" alt="">
+                                <span>Json Francisco</span>
+                            </div>
+                            <span class="time">August 20, 2022</span>
                         </div>
-                        <span class="time">August 20, 2022</span>
-                    </div>
-                </article>
-                <article class="col-4">
-                    <img src="./asset/img/img-post3.png" alt="">
-                    <span class="tag rounded">Technology</span>
-                    <h4>The Impact of Technologu on the Workplace: How Teachnology is Changing</h4>
-                    <div class="infor-user">
-                        <div class="user">
-                            <img src="./asset/img/img-user3.png" alt="">
-                            <span>Elizabeth Slavin</span>
+                    </article>
+                </div>
+                <div class="col-4">
+                    <article>
+                        <img src="./asset/img/img-post3.png" alt="">
+                        <span class="tag rounded">Technology</span>
+                        <h4>The Impact of Technologu on the Workplace: How Teachnology is Changing</h4>
+                        <div class="infor-user">
+                            <div class="user">
+                                <img src="./asset/img/img-user3.png" alt="">
+                                <span>Elizabeth Slavin</span>
+                            </div>
+                            <span class="time">August 20, 2022</span>
                         </div>
-                        <span class="time">August 20, 2022</span>
-                    </div>
-                </article>
-                <article class="col-4">
-                    <img src="./asset/img/img-post4.png" alt="">
-                    <span class="tag rounded">Technology</span>
-                    <h4>The Impact of Technologu on the Workplace: How Teachnology is Changing</h4>
-                    <div class="infor-user">
-                        <div class="user">
-                            <img src="./asset/img/img-user4.png" alt="">
-                            <span>Ernie Smith</span>
+                    </article>
+                </div>
+                <div class="col-4">
+                    <article>
+                        <img src="./asset/img/img-post4.png" alt="">
+                        <span class="tag rounded">Technology</span>
+                        <h4>The Impact of Technologu on the Workplace: How Teachnology is Changing</h4>
+                        <div class="infor-user">
+                            <div class="user">
+                                <img src="./asset/img/img-user4.png" alt="">
+                                <span>Ernie Smith</span>
+                            </div>
+                            <span class="time">August 20, 2022</span>
                         </div>
-                        <span class="time">August 20, 2022</span>
-                    </div>
-                </article>
-                <article class="col-4">
-                    <img src="./asset/img/img-post5.png" alt="">
-                    <span class="tag rounded">Technology</span>
-                    <h4>The Impact of Technologu on the Workplace: How Teachnology is Changing</h4>
-                    <div class="infor-user">
-                        <div class="user">
-                            <img src="./asset/img/img-user5.png" alt="">
-                            <span>Eric Smith</span>
+                    </article>
+                </div>
+                <div class="col-4">
+                    <article>
+                        <img src="./asset/img/img-post5.png" alt="">
+                        <span class="tag rounded">Technology</span>
+                        <h4>The Impact of Technologu on the Workplace: How Teachnology is Changing</h4>
+                        <div class="infor-user">
+                            <div class="user">
+                                <img src="./asset/img/img-user5.png" alt="">
+                                <span>Eric Smith</span>
+                            </div>
+                            <span class="time">August 20, 2022</span>
                         </div>
-                        <span class="time">August 20, 2022</span>
-                    </div>
-                </article>
-                <article class="col-4">
-                    <img src="./asset/img/img-post6.png" alt="">
-                    <span class="tag rounded">Technology</span>
-                    <h4>The Impact of Technologu on the Workplace: How Teachnology is Changing</h4>
-                    <div class="infor-user">
-                        <div class="user">
-                            <img src="./asset/img/img-user2.png" alt="">
-                            <span>Tracey Wilson</span>
+                    </article>
+                </div>
+                <div class="col-4">
+                    <article>
+                        <img src="./asset/img/img-post6.png" alt="">
+                        <span class="tag rounded">Technology</span>
+                        <h4>The Impact of Technologu on the Workplace: How Teachnology is Changing</h4>
+                        <div class="infor-user">
+                            <div class="user">
+                                <img src="./asset/img/img-user2.png" alt="">
+                                <span>Tracey Wilson</span>
+                            </div>
+                            <span class="time">August 20, 2022</span>
                         </div>
-                        <span class="time">August 20, 2022</span>
-                    </div>
-                </article>
-                <article class="col-4">
-                    <img src="./asset/img/img-post7.png" alt="">
-                    <span class="tag rounded">Technology</span>
-                    <h4>The Impact of Technologu on the Workplace: How Teachnology is Changing</h4>
-                    <div class="infor-user">
-                        <div class="user">
-                            <img src="./asset/img/img-user1.png" alt="">
-                            <span>Jason Francisco</span>
-                        </div>
+                    </article>
+                </div>
+                <div class="col-4">
+                    <article>
+                        <img src="./asset/img/img-post7.png" alt="">
+                        <span class="tag rounded">Technology</span>
+                        <h4>The Impact of Technologu on the Workplace: How Teachnology is Changing</h4>
+                        <div class="infor-user">
+                            <div class="user">
+                                <img src="./asset/img/img-user1.png" alt="">
+                                <span>Jason Francisco</span>
+                            </div>
 
-                        <span class="time">August 20, 2022</span>
-                    </div>
-                </article>
-                <article class="col-4">
-                    <img src="./asset/img/img-post8.png" alt="">
-                    <span class="tag rounded">Technology</span>
-                    <h4>The Impact of Technologu on the Workplace: How Teachnology is Changing</h4>
-                    <div class="infor-user">
-                        <div class="user">
-                            <img src="./asset/img/img-user3.png" alt="">
-                            <span>Elizabeth Slavin</span>
+                            <span class="time">August 20, 2022</span>
                         </div>
-                        <span class="time">August 20, 2022</span>
-                    </div>
-                </article>
-                <article class="col-4">
-                    <img src="./asset/img/img-post9.png" alt="">
-                    <span class="tag rounded">Technology</span>
-                    <h4>The Impact of Technologu on the Workplace: How Teachnology is Changing</h4>
-                    <div class="infor-user">
-                        <div class="user">
-                            <img src="./asset/img/img-user4.png" alt="">
-                            <span>Ernie Smith</span>
+                    </article>
+                </div>
+                <div class="col-4">
+                    <article>
+                        <img src="./asset/img/img-post8.png" alt="">
+                        <span class="tag rounded">Technology</span>
+                        <h4>The Impact of Technologu on the Workplace: How Teachnology is Changing</h4>
+                        <div class="infor-user">
+                            <div class="user">
+                                <img src="./asset/img/img-user3.png" alt="">
+                                <span>Elizabeth Slavin</span>
+                            </div>
+                            <span class="time">August 20, 2022</span>
                         </div>
-                        <span class="time">August 20, 2022</span>
-                    </div>
-                </article>
+                    </article>
+                </div>
+                <div class="col-4">
+                    <article>
+                        <img src="./asset/img/img-post9.png" alt="">
+                        <span class="tag rounded">Technology</span>
+                        <h4>The Impact of Technologu on the Workplace: How Teachnology is Changing</h4>
+                        <div class="infor-user">
+                            <div class="user">
+                                <img src="./asset/img/img-user4.png" alt="">
+                                <span>Ernie Smith</span>
+                            </div>
+                            <span class="time">August 20, 2022</span>
+                        </div>
+                    </article>
+                </div>
             </div>
             <button class="border-1 view rounded d-flex justify-content-center align-items-center">
                 View All Post
@@ -236,7 +254,7 @@
             <h4>You can place ads</h4>
             <p>750x100</p>
         </section>
-    </main>  -->
+    </main>
     <!-- <footer>
         <div class="container first">
             <div class="about">
